# gmailrulesengine

./: .gitignore  Makefile  README.md  fetch_email_main.py  gmailrulesengine.sqlite  piccolo_conf.py  pyproject.toml  rules_and_executions.py  rules_config.py
core/: fetch_and_store_email.py  pydantic_models.py  rules_executions.py  sample.py
core/rules_engine/: apply_rules.py  constants.py  execute_actions.py  rules_config.py
core/services/db/: email_service.py
core/services/gmail/: client.py
gmail_rules_engine/: piccolo_app.py  tables.py
gmail_rules_engine/piccolo_migrations/: gmail_rules_engine_2024_12_02t20_16_21_430052.py  gmail_rules_engine_2024_12_03t22_34_02_751980.py
tests/: test_fetch_and_store_email.py  test_rules_executions.py  test_sample.py
tests/rules_engine/: test_apply_rules.py  test_execute_actions.py
tests/services/db/: test_email_service.py
tests/services/gmail/: test_client.py
