[project]
name = "gmail-rules-engine"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "GuruVi", email = "guruvigneshwaran@gmail.com"},
]
dependencies = [
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib",
    "piccolo[sqlite]"
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}

[tool]
[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "black==23.1.*",
    "pytest==8.2.*",
    "pytest-cov==5.0.*",
    "ipython==8.30.*"
]

[tool.pytest.ini_options]
markers = [
    "gmail_client",
]
