[project]
name = "gmail-rules-engine"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "GuruVi", email = "guruvigneshwaran@gmail.com"},
]
dependencies = [
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib",
    "piccolo[sqlite]",
    "pydantic"
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}

[tool]
[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "black==23.1.*",
    "pytest==8.2.*",
    "pytest-cov==5.0.*",
    "ipython==8.30.*"
]

[tool.pytest.ini_options]
markers = [
    "gmail_client",
    "applyrules",
    "email_db_service",
    "fetch_and_store_email",
    "execute_actions"
]

[tool.pdm.scripts]
fetch-emails = "env DATABASE_NAME=gmailrulesengine.sqlite python fetch_email_main.py"
apply-rules = "env DATABASE_NAME=gmailrulesengine.sqlite python rules_and_executions.py"
